--- a/Delegates/5-DelegatesAndEvents.csproj
+++ b/Delegates/5-DelegatesAndEvents.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{1529843B-FF33-4F41-88DB-0600305D16E0}</ProjectGuid>
+    <ProjectGuid>{58DAB5B2-A398-4192-8E2E-63C798E6706E}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>LezioneCSharp</RootNamespace>
-    <AssemblyName>LezioneCSharp</AssemblyName>
+    <RootNamespace>Delegates</RootNamespace>
+    <AssemblyName>Delegates</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -42,7 +42,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
+    <Compile Include="DelegatesAndEvents.cs" />
+    <Compile Include="Person.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
