Main in front of main classes

--- a/4-ExtensionMethods/4-ExtensionMethods.csproj
+++ b/4-ExtensionMethods/4-ExtensionMethods.csproj
@@ -43,7 +43,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Complex.cs" />
-    <Compile Include="ExtensionMethodsExample.cs" />
+    <Compile Include="MainExtensionMethodsExample.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
