--- a/6-NullablesAndOperators/6-NullablesAndOperators.csproj
+++ b/6-NullablesAndOperators/6-NullablesAndOperators.csproj
@@ -42,7 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="NullablesAndOperators.cs" />
+    <Compile Include="MainNullablesAndOperators.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
