--- a/2-Indexers/2-Indexers.csproj
+++ b/2-Indexers/2-Indexers.csproj
@@ -42,7 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Indexers.cs" />
+    <Compile Include="MainIndexers.cs" />
     <Compile Include="Matrix.cs" />
     <Compile Include="Map2d.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
