--- a/5-DelegatesAndEvents/5-DelegatesAndEvents.csproj
+++ b/5-DelegatesAndEvents/5-DelegatesAndEvents.csproj
@@ -42,7 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DelegatesAndEvents.cs" />
+    <Compile Include="MainDelegatesAndEvents.cs" />
     <Compile Include="Person.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
