--- a/7-DynamicDispatch/7-DynamicDispatch.csproj
+++ b/7-DynamicDispatch/7-DynamicDispatch.csproj
@@ -42,7 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DynamicDispatch.cs" />
+    <Compile Include="MainDynamicDispatch.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
