--- a/8-Enumerables/8-Enumerables.csproj
+++ b/8-Enumerables/8-Enumerables.csproj
@@ -42,7 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="EnumerablesExamples.cs" />
+    <Compile Include="MainEnumerablesExamples.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
