--- a/9-Iterators/9-Iterators.csproj
+++ b/9-Iterators/9-Iterators.csproj
@@ -42,7 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Iterators.cs" />
+    <Compile Include="MainIterators.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
