--- a/3-OperatorsOverloading/3-OperatorsOverloading.csproj
+++ b/3-OperatorsOverloading/3-OperatorsOverloading.csproj
@@ -42,7 +42,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="MainOperatorsOverloading.cs" />
+    <Compile Include="List.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StrangeInt.cs" />
   </ItemGroup>
