--- a/5-DelegatesAndEvents/5-DelegatesAndEvents.csproj
+++ b/5-DelegatesAndEvents/5-DelegatesAndEvents.csproj
@@ -42,8 +42,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="MainDelegatesAndEvents.cs" />
-    <Compile Include="Person.cs" />
+    <Compile Include="IObservableList.cs" />
+    <Compile Include="ObservableList.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
