build: make all projects executables

--- a/1-Properties/1-Properties.csproj
+++ b/1-Properties/1-Properties.csproj
@@ -14,6 +14,7 @@
     <Nullable>disable</Nullable>
     <LangVersion>8</LangVersion>
     <OutputType>Exe</OutputType>
+    <StartupObject>Properties.Program</StartupObject>
   </PropertyGroup>
 
 </Project>
