--- a/4-ExtensionMethods/4-ExtensionMethods.csproj
+++ b/4-ExtensionMethods/4-ExtensionMethods.csproj
@@ -13,8 +13,8 @@
     <NeutralLanguage>en</NeutralLanguage>
     <Nullable>disable</Nullable>
     <LangVersion>8</LangVersion>
-    <OutputType>Exe</OutputType>
-    <StartupObject>ExtensionMethods.Program</StartupObject>
+    <OutputType>Library</OutputType>
+    <StartupObject></StartupObject>
   </PropertyGroup>
 
 </Project>
