--- a/2-Indexers/2-Indexers.csproj
+++ b/2-Indexers/2-Indexers.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net472</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
     <PackageId>Indexers</PackageId>
     <Authors>Giovanni Ciatto;Angelo Croatti;Niccolò Maltoni;Andrea Placuzzi</Authors>
     <Company>Università di Bologna</Company>
