--- a/2-IndexersTests/2-IndexersTests.csproj
+++ b/2-IndexersTests/2-IndexersTests.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net472</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
     <RootNamespace>_2_IndexersTests</RootNamespace>
 
     <IsPackable>false</IsPackable>
