--- a/4-ExtensionMethodsTests/4-ExtensionMethodsTests.csproj
+++ b/4-ExtensionMethodsTests/4-ExtensionMethodsTests.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net472</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
     <RootNamespace>_4_ExtensionMethodsTests</RootNamespace>
 
     <IsPackable>false</IsPackable>
