--- a/1-Properties/1-Properties.csproj
+++ b/1-Properties/1-Properties.csproj
@@ -11,7 +11,7 @@
     <RootNamespace>Properties</RootNamespace>
     <AssemblyName>Properties</AssemblyName>
     <NeutralLanguage>en</NeutralLanguage>
-    <Nullable>disable</Nullable>
+    <Nullable>annotations</Nullable>
     <LangVersion>8</LangVersion>
     <OutputType>Exe</OutputType>
     <StartupObject>Properties.Program</StartupObject>
