--- a/2-Indexers/2-Indexers.csproj
+++ b/2-Indexers/2-Indexers.csproj
@@ -11,10 +11,9 @@
     <RootNamespace>Indexers</RootNamespace>
     <AssemblyName>Indexers</AssemblyName>
     <NeutralLanguage>en</NeutralLanguage>
-    <Nullable>disable</Nullable>
+    <Nullable>annotations</Nullable>
     <LangVersion>8</LangVersion>
     <OutputType>Library</OutputType>
-    <StartupObject></StartupObject>
   </PropertyGroup>
 
 </Project>
