--- a/4-ExtensionMethods/4-ExtensionMethods.csproj
+++ b/4-ExtensionMethods/4-ExtensionMethods.csproj
@@ -11,10 +11,9 @@
     <RootNamespace>ExtensionMethods</RootNamespace>
     <AssemblyName>ExtensionMethods</AssemblyName>
     <NeutralLanguage>en</NeutralLanguage>
-    <Nullable>disable</Nullable>
+    <Nullable>annotations</Nullable>
     <LangVersion>8</LangVersion>
     <OutputType>Library</OutputType>
-    <StartupObject></StartupObject>
   </PropertyGroup>
 
 </Project>
