--- a/4-ExtensionMethodsTests/4-ExtensionMethodsTests.csproj
+++ b/4-ExtensionMethodsTests/4-ExtensionMethodsTests.csproj
@@ -2,9 +2,16 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <RootNamespace>_4_ExtensionMethodsTests</RootNamespace>
-
+    <RootNamespace>ExtensionMethods</RootNamespace>
     <IsPackable>false</IsPackable>
+    <AssemblyName>ExtensionMethods.Tests</AssemblyName>
+    <Version>2.0.0</Version>
+    <Authors>Giovanni Ciatto;Angelo Croatti;Niccolò Maltoni;Andrea Placuzzi</Authors>
+    <Company>Università di Bologna</Company>
+    <Product>OOP Lab - C#</Product>
+    <Copyright>Copyright © 2020</Copyright>
+    <OutputType>Library</OutputType>
+    <Nullable>annotations</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
