--- a/3-OperatorsOverloading/3-OperatorsOverloading.csproj
+++ b/3-OperatorsOverloading/3-OperatorsOverloading.csproj
@@ -17,4 +17,12 @@
     <StartupObject>OperatorsOverloading.Program</StartupObject>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+  </PropertyGroup>
+
 </Project>
