--- a/2-Indexers/2-Indexers.csproj
+++ b/2-Indexers/2-Indexers.csproj
@@ -11,7 +11,7 @@
     <RootNamespace>Indexers</RootNamespace>
     <AssemblyName>Indexers</AssemblyName>
     <NeutralLanguage>en</NeutralLanguage>
-    <Nullable>annotations</Nullable>
+    <Nullable>disable</Nullable>
     <LangVersion>8</LangVersion>
     <OutputType>Library</OutputType>
   </PropertyGroup>
