--- a/2-IndexersTests/2-IndexersTests.csproj
+++ b/2-IndexersTests/2-IndexersTests.csproj
@@ -11,7 +11,7 @@
     <Copyright>Copyright © 2020</Copyright>
     <Version>2.0.0</Version>
     <OutputType>Library</OutputType>
-    <Nullable>annotations</Nullable>
+    <Nullable>disable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
