--- a/3-OperatorsOverloading/3-OperatorsOverloading.csproj
+++ b/3-OperatorsOverloading/3-OperatorsOverloading.csproj
@@ -11,7 +11,7 @@
     <RootNamespace>OperatorsOverloading</RootNamespace>
     <AssemblyName>OperatorsOverloading</AssemblyName>
     <NeutralLanguage>en</NeutralLanguage>
-    <Nullable>annotations</Nullable>
+    <Nullable>disable</Nullable>
     <LangVersion>8</LangVersion>
     <OutputType>Exe</OutputType>
     <StartupObject>OperatorsOverloading.Program</StartupObject>
