--- a/4-ExtensionMethods/4-ExtensionMethods.csproj
+++ b/4-ExtensionMethods/4-ExtensionMethods.csproj
@@ -11,7 +11,7 @@
     <RootNamespace>ExtensionMethods</RootNamespace>
     <AssemblyName>ExtensionMethods</AssemblyName>
     <NeutralLanguage>en</NeutralLanguage>
-    <Nullable>annotations</Nullable>
+    <Nullable>disable</Nullable>
     <LangVersion>8</LangVersion>
     <OutputType>Library</OutputType>
   </PropertyGroup>
