--- a/4-ExtensionMethods/4-ExtensionMethods.csproj
+++ b/4-ExtensionMethods/4-ExtensionMethods.csproj
@@ -2,26 +2,23 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <PackageId>ExtensionMethods</PackageId>
+    <RootNamespace>ExtensionMethods</RootNamespace>
+    <IsPackable>false</IsPackable>
+    <AssemblyName>ExtensionMethods.Tests</AssemblyName>
+    <Version>2.0.0</Version>
     <Authors>Giovanni Ciatto;Angelo Croatti;Niccolò Maltoni;Andrea Placuzzi</Authors>
     <Company>Università di Bologna</Company>
     <Product>OOP Lab - C#</Product>
     <Copyright>Copyright © 2020</Copyright>
-    <Version>2.0.0</Version>
-    <RootNamespace>ExtensionMethods</RootNamespace>
-    <AssemblyName>ExtensionMethods</AssemblyName>
-    <NeutralLanguage>en</NeutralLanguage>
-    <Nullable>disable</Nullable>
-    <LangVersion>8</LangVersion>
     <OutputType>Library</OutputType>
+    <Nullable>disable</Nullable>
   </PropertyGroup>
 
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <GenerateDocumentationFile>false</GenerateDocumentationFile>
-  </PropertyGroup>
-
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-    <GenerateDocumentationFile>false</GenerateDocumentationFile>
-  </PropertyGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.7.1" />
+    <PackageReference Include="MSTest.TestAdapter" Version="2.1.1" />
+    <PackageReference Include="MSTest.TestFramework" Version="2.1.1" />
+    <PackageReference Include="coverlet.collector" Version="1.3.0" />
+  </ItemGroup>
 
 </Project>
